[fix/TK-127]:코드 리뷰 수반영